# cargo-check-updates

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/cargo/: mod.rs  parser.rs
src/commands/: check.rs  mod.rs
src/registry/: client.rs  mod.rs
src/ui/: mod.rs  output.rs
