[package]
name = "cargo-check-updates"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Upgrade your Cargo.toml dependencies to the latest versions"
license = "MIT"
repository = "https://github.com/yourusername/cargo-check-updates"
keywords = ["cargo", "dependencies", "updates", "cli", "cargo-subcommand"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]

[[bin]]
name = "ccu"
path = "src/main.rs"

[[bin]]
name = "cargo-check-updates"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
toml_edit = "0.21"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
semver = "1.0"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
